--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Simple social network for developers",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "run-p \"client\" \"start\""
   },
   "author": "Wojciech Kalebasiak",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.15",
+    "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^10.7.1"
