--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "npm-run-all": "^4.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "validator": "^10.7.1"
   }
 }
