--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "jwt-decode": "^2.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -16,7 +18,5 @@
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
-  "devDependencies": {
-    "react-router-dom": "^4.3.1"
-  }
+  "devDependencies": {}
 }
